💏🍯 Checkpoint ./memorials.html:30726734/2166

--- a/memorials.html
+++ b/memorials.html
@@ -21,24 +21,39 @@
   <div id="visit">
     <h3>Locations</h3> 
     <section class="container">
-    <button id="showhide">Toggle All</button>
+    <button id="showhide">See All</button>
     <div class="item">
       <div class="heading">
         <h2>Asia</h2>
-        
       </div>
       <div class="details">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <a href="https://goo.gl/maps/RLx6p8XyGC6WGuet6">Seoul, South Korea</a>
+        <br>
+        <a href="https://goo.gl/maps/FiEanz8kjNykmvcV8">Paju, South Korea</a>
+        <br>
+        <a href="https://goo.gl/maps/JXc8Dt5TLc9Teikt9">Pyeongchang, South Korea</a>
+        <br>
+        <a href="https://goo.gl/maps/bWN7qu5ZjZsthCPp9">Gwangju, South Korea</a>
+        <br>
+        <a href="https://goo.gl/maps/6tiG9fKhfNYgL6qu7">Busan, South Korea</a>
+        <br>
+        <br>
+        <a href="https://goo.gl/maps/B6qhfZJMoPuiShKc9">Nanjing, China</a>
+        <br>
+        <br>
+        <a href="https://goo.gl/maps/o5vJEi1QRfTDMXLZ6">Hong Kong</a>
+        <br>
+        <br>
+        <a href="https://www.smithsonianmag.com/smart-news/taiwan-unveils-its-first-statue-honoring-comfort-women-180970053/">Tainan, Taiwan</a>
       </div>
     </div>
 
     <div class="item">
       <div class="heading">
-        <h2>America</h2>
-        
+        <h2>North America</h2>
       </div>
       <div class="details">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <a href=""
       </div>
     </div>
 
