--- a/archives.html
+++ b/archives.html
@@ -27,8 +27,7 @@
       </div>
 
       <div class="bokdong">
-        <a href="https://www.youtube.com/watch?v=qsT97ax_Xb0&vl=en" class="pic"
-          ><img
+        <a href="https://www.youtube.com/watch?v=qsT97ax_Xb0&vl=en" class="pic"><img
             src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbokdong.png?v=1618910247679"
             width="80%"
         /></a>
