--- a/mission.html
+++ b/mission.html
@@ -20,9 +20,9 @@
   <br>
   But more importantly, I intend for this contribution to
     <ul class="goals">
-      <i><li>Function as a significant platform to restore ex-comfort women’s voices and unveil their truths</li></i>
+      <i><li>Function as a significant platform to restore these women’s voices and unveil their truths</li></i>
       <i><li>Propel their marginalized narratives to the forefront of international discourse</li></i>
-      <i><li>Help shift the paradigms for representing ex-comfort women as willful prostitutes to victimized sex slaves</li></i>
+      <i><li>Help shift the paradigms for representing these women as willful prostitutes("comfort women") to victimized sex slaves</li></i>
       <i><li>Get people to care</li></i>
     </ul>
   With more attention drawn to the women themselves, prospects for a more-than-deserved proper acknowledgement, long-overdue apology, and victim-focused approaches of reparation become less insurmountable than ever before. 
