🎩👂 Checkpoint ./style.css:30726734/44 ./memorials.html:30726734/1648

--- a/memorials.html
+++ b/memorials.html
@@ -110,7 +110,21 @@
   </section>
   </div>
   
-  
+  <div class="picmarquee">
+    <ul class="marqueepics">
+      <li class="marqueeitem"><img class="marqueeimage" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem1.png?v=1619257893218"></li>
+      <li class="marqueeitem"><img class="marqueeimage" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem2.png?v=1619257879416"></li>
+      <li class="marqueeitem"><img class="marqueeimage" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem4.png?v=1619257890050"></li>
+      <li class="marqueeitem"><img class="marqueeimage" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem5.png?v=1619257898296"></li>
+      <li class="marqueeitem"><img class="marqueeimage" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem6.png?v=1619257891657"></li>
+      <li class="marqueeitem"><img class="marqueeimage" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem7.png?v=1619257886344"></li>
+      <li class="marqueeitem"><img class="marqueeimage" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem8.png?v=1619257890320"></li>
+      <li class="marqueeitem"><img class="marqueeimage" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem9.png?v=1619257892014"></li>
+      <li class="marqueeitem"><img class="marqueeimage" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem10.png?v=1619257902323"></li>
+      <li class="marqueeitem"><img class="marqueeimage" src=""></li>
+      <li class="marqueeitem"><img class="marqueeimage" src=""></li>
+    </ul>
+  </div>
   
   
   
