--- a/memorials.html
+++ b/memorials.html
@@ -125,6 +125,8 @@
         <a href="https://goo.gl/maps/gpKnyuNDdrL1h9uq5">Berlin, Germany</a>
          <br>
         <br>
+        <img class="europe" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem15.png?v=1619257896166">
+        <img class="europe" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmem14.png?v=1619257899584">
       </div>
     </div>
       
