🌠🚛 Checkpoint ./style.css:30726734/4 ./pattern.js:30726734/1187 ./mission.html:30726734/584 ./main.js:30726734/9

--- a/mission.html
+++ b/mission.html
@@ -5,10 +5,13 @@
     <title>Mission</title>
     <link rel="stylesheet" href="style.css">
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>  
-   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+  <script src="pattern.js"></script>
   
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>  
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="main.js"></script>
+    
   
   <h3>Mission Statement</h3>
 </head>
