🌁🎓 Checkpoint ./archives.html:30726734/5 ./main.js:30726734/165

--- a/archives.html
+++ b/archives.html
@@ -23,7 +23,7 @@
             width="80%"
         /></a>
         <br />
-        LEE YONG-SU<br />(1928~),<br />South Korea
+        LEE YONG-SU<br />(1928~)<br />South Korea
       </div>
 
       <div class="bokdong">
@@ -32,7 +32,7 @@
             width="80%"
         /></a>
         <br />
-        KIM BOK-DONG<br />(1926~2019),<br />South Korea
+        KIM BOK-DONG<br />(1926~2019)<br />South Korea
       </div>
 
       <div class="estelita">
@@ -42,7 +42,7 @@
             width="80%"
         /></a>
         <br />
-        ESTELITA DY<br />(1929/1930~),<br />The Philippines
+        ESTELITA DY<br />(1929/1930~)<br />The Philippines
       </div>
     </div>
 
