--- a/about.html
+++ b/about.html
@@ -24,7 +24,8 @@
   
   </div>
  
-  <div class= "img1">
+  <div id="img">
+      <div class= "img1">
       <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage3.jpg?v=1618895448509" class="aimages"/>
   </div>
   <div class="img1">
@@ -33,6 +34,8 @@
   <div class="img1">
     <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage1.jpeg?v=1618895439249" class="aimages" />
   </div>
+  </div>
+
   
 
     <div class="arrow">
