👝🐏 Checkpoint ./mission.html:30726734/238 ./README.md:30726734/39 ./home.html:30726734/56 ./about.html:30726734/31 ./archives.html:30726734/35 ./memorials.html:30726734/85 ./involved.html:30726734/30 ./style.css:30726734/247 ./.glitch-assets:30726734/367

--- a/home.html
+++ b/home.html
@@ -11,6 +11,9 @@
 </head>
   
 <body class="home">
+  
+  <div class="logo"> </div>
+  
   <div class="home2">
   <h1 class="home1"> <a href = "about.html" class="homepage">COMFORT </a> WOMEN</h1>
 
