--- a/mission.html
+++ b/mission.html
@@ -16,12 +16,14 @@
   <h3>Mission Statement</h3>
 </head>
 <body class="mission">
+  <div class="logo"> </div>
+  
   <div class="text">
   <p>
   Evidently, the comfort women issue remains unresolved as Japan continuously neglects its liabilities and the victims remain critical of these so-called “settlements.” But the failures at proper reparation are concerning because these women have an unquestionable right to an apology—which are unfortunately being disregarded. In my aims to reinforce that right, I've created this website to encourage people not to shy away from a painful history. Discussion needs to be facilitated through education, as well as the sharing of stories, archives and resources. 
   <br>
   <br>
-  But more importantly, I intend for this contribution to
+  But more importantly, I intend for "She will not stay silent no more" to
     <ul class="goals">
       <i><li>Function as a significant platform to restore these women’s voices and unveil their truths</li></i>
       <i><li>Propel their marginalized narratives to the forefront of international discourse</li></i>
