--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
 </head>
 
 <body class="about">
+  <div class="logo"> </div>
+  
   <h3 id="hist">A history not to be forgotten...</h3>
   <div class="txt">
     <div class="text1">
