--- a/involved.html
+++ b/involved.html
@@ -9,6 +9,7 @@
     <script src="bg.js"></script>
   </head>
   <body class="involved">
+    <div class="logo"> </div>
     <div class="rl">
       <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
       <h2>
