⛷🍓 Checkpoint ./about.html:30726734/1213 ./style.css:30726734/255 ./main.js:30726734/20

--- a/about.html
+++ b/about.html
@@ -3,15 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>About</title>
-    <link rel="stylesheet" href="style.css"/>
-    
+    <link rel="stylesheet" href="style.css">
+  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>  
    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  
   <script src="main.js"></script>
     
   </head>
 
   <body class="about">
+    <div class="logo"> </div>
     <h3 id="hist">A history not to be forgotten...</h3>
 
     <div class="unit">
@@ -23,6 +25,7 @@
       </div>
 
       <div class="scroll-text">
+        <h4 class="subtitle">WHO ARE "COMFORT WOMEN?"</h4>
         Despite 80 years passing since their surrender in World War II, the
         Japanese government has never issued a formal apology statement nor made
         the proper reparations for its most notable war victims—colonized sex
@@ -49,6 +52,7 @@
       </div>
 
       <div class="scroll-text">
+        <h4 class="subtitle">SURVIVORS</h4>
         By the end of WWII, many comfort women were executed while those that
         survived had difficulties reintegrating into society, suffering from
         physical maladies (including infertility), psychological trauma,
