--- a/about.html
+++ b/about.html
@@ -13,8 +13,9 @@
   </head>
 
   <body class="about">
-    <div class="logo"> </div>
+    
     <h3 id="hist">A history not to be forgotten...</h3>
+    <div class="logo"> </div>
 
     <div class="unit">
        <div class="sticky-img">
@@ -52,7 +53,7 @@
       </div>
 
       <div class="scroll-text">
-        <h4 class="subtitle">SURVIVORS</h4>
+        <h4 class="subtitle">SURVIVORS WITH STORIES</h4>
         By the end of WWII, many comfort women were executed while those that
         survived had difficulties reintegrating into society, suffering from
         physical maladies (including infertility), psychological trauma,
@@ -76,6 +77,7 @@
       </div>
       
       <div class="scroll-text">
+        <h4 class="subtitle">SHE WILL NOT STAY SILENT NO MORE</h4>
         Yet, attempts to compensate the victims so far have only been an
         offense—rushed one-sided deals between national leaders that excluded
         the victims' voices, unofficial sympathy charities pledged through
