--- a/about.html
+++ b/about.html
@@ -88,10 +88,7 @@
 
     <div class="arrow">
       <a href="mission.html">
-        <img
-          src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829"
-          width="20%"
-        />
+        <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width="20%"/>
       </a>
     </div>
   </body>
