--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
       </div>
       
       <div class="scroll-text">
-        <h4 class="subtitle">SHE WILL NOT STAY SILENT NO MORE</h4>
+        <h4 class="subtitle">SHE WILL NOT STAY SILENT ANYMORE</h4>
         Yet, attempts to compensate the victims so far have only been an
         offense—rushed one-sided deals between national leaders that excluded
         the victims' voices, unofficial sympathy charities pledged through
