--- a/mission.html
+++ b/mission.html
@@ -31,7 +31,9 @@
       <i><li>Get people to care</li></i>
     </ul>
   With more attention drawn to the women themselves, prospects for a more-than-deserved proper acknowledgement, long-overdue apology, and victim-focused approaches of reparation become less insurmountable than ever before. 
-  </p>
+  <br><br>
+    Created By: Jennifer Lee
+    </p>
   </div>
       <img class="voice" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fkim_bok-dong_funeral-20190202_afp-jiji.jpg?v=1619130129776" width="100%">
   
