--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <div class="unit">
        <div class="sticky-img">
         <img
-          src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage1.jpeg?v=1618895439249"
+          src="./glitch-assets/image1.jpeg"
           class="aimages"
         />
       </div>
@@ -45,7 +45,7 @@
     <div class="unit">
        <div class="sticky-img">
         <img
-          src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage3.jpg?v=1618895448509"
+          src="./glitch-assets/image3.jpg"
           class="aimages"
         />
       </div>
@@ -69,7 +69,7 @@
      
         <div class="sticky-img">
         <img
-          src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fimage2.jpeg?v=1618895451966"
+          src="./glitch-assets/image2.jpeg"
           class="aimages"
         />
       </div>
@@ -88,7 +88,7 @@
 
     <div class="arrow">
       <a href="mission.html">
-        <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width="20%"/>
+        <img src="./glitch-assets/arrow.png" width="20%"/>
       </a>
     </div>
   </body>
