--- a/archives.html
+++ b/archives.html
@@ -21,7 +21,7 @@
       <div class="yongsu">
         <a href="https://www.youtube.com/watch?v=q9GBaAtCewk" class="pic"
           ><img
-            src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fyongsu.png?v=1618910244499"
+            src="./glitch-assets/yongsu.png"
             width="80%"
         /></a>
         <br />
@@ -30,7 +30,7 @@
 
       <div class="bokdong">
         <a href="https://www.youtube.com/watch?v=qsT97ax_Xb0&vl=en" class="pic"><img
-            src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fbokdong.png?v=1618910247679"
+            src="./glitch-assets/bokdong.png"
             width="80%"
         /></a>
         <br />
@@ -40,7 +40,7 @@
       <div class="estelita">
         <a href="https://www.youtube.com/watch?v=j7FXmsLBqNI" class="pic"
           ><img
-            src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Festelita.png?v=1618910235901"
+            src="./glitch-assets/estelita.png"
             width="80%"
         /></a>
         <br />
@@ -56,7 +56,7 @@
             >Comfort Women Digital Archive Museum</a
           >
           <img
-            src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmuseum.gif?v=1619161146640"
+            src="./glitch-assets/museum.gif"
             width="90%"
           />
         </div>
@@ -68,7 +68,7 @@
             >E-IR News Archive</a
           >
           <img
-            src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fnews.gif?v=1619161143112"
+            src="./glitch-assets/news.gif"
             width="90%"
           />
         </div>
@@ -80,7 +80,7 @@
             >Hyperallergic Articles</a
           >
           <img
-            src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Farticles.gif?v=1619161139113"
+            src="./glitch-assets/articles.gif"
             width="90%"
           />
         </div>
@@ -93,7 +93,7 @@
             ><i>Sorrowful Homecoming </i>Documentary</a
           >
           <img
-            src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fsh.gif?v=1619162132634"
+            src="./glitch-assets/sh.gif"
             width="90%"
           />
         </div>
@@ -105,7 +105,7 @@
             ><i>My Wish </i>Documentary</a
           >
           <img
-            src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fmywish.gif?v=1619162132634"
+            src="./glitch-assets/mywish.gif"
             width="90%"
           />
         </div>
@@ -115,7 +115,7 @@
     <div class="arrow">
       <a href="memorials.html">
         <img
-          src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829"
+          src="./glitch-assets/arrow.png"
           width="20%"
         />
       </a>
