--- a/mission.html
+++ b/mission.html
@@ -35,10 +35,10 @@
     —Jennifer Lee, creator
     </p>
   </div>
-      <img class="voice" src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Fkim_bok-dong_funeral-20190202_afp-jiji.jpg?v=1619130129776" width="100%">
+      <img class="voice" src="./glitch-assets/kim-bok-dong.jpg" width="100%">
   
   <div class="arrow">
-      <a href="archives.html"> <img src="https://cdn.glitch.com/5f40a085-d9fc-4d9d-a939-51a461e323d5%2Funnamed.png?v=1618895980829" width="20%"/></a>
+      <a href="archives.html"> <img src="./glitch-assets/arrow.png" width="20%"/></a>
   </div>
 
 </body>
