--- a/involved.html
+++ b/involved.html
@@ -14,14 +14,14 @@
       <h2><a href="https://remembercomfortwomen.org/donate/">DONATE</a></h2>
       <h2>
         <a
-          href="https://www.change.org/p/urge-the-japan-government-to-take-responsibility-for-comfort-women"
+          href="http://www.voicecw.org/"
           >PETITION</a
         >
       </h2>
       <h2>
-        <a href="https://www.yalestatueofpeace.org/resources">RESOURCES</a>
+        <a href="https://kls.law.columbia.edu/content/online-resources-comfort-women">RESOURCES</a>
       </h2>
-      <h2><a href="https://comfort-women.org">LEARN</a></h2>
+      <h2><a href="https://comfortwomenaction.org/">LEARN</a></h2>
 
       <h4><a href="index.html">EXPLORE AGAIN</a></h4>
     </div>
